--- a/src/main/resources/templates/sellTicket.html
+++ b/src/main/resources/templates/sellTicket.html
@@ -134,7 +134,7 @@
         </select>
 
         <label>Number of Tickets:</label>
-        <input type="number" name="numberOfTickets" min="1" required />
+        <input type="number" name="numberOfTickets" min="1" max="1" required />
 
         <label>Passenger Age:</label>
         <input type="number" name="age" min="0" required />
@@ -149,7 +149,7 @@
         <input type="number" step="0.01" name="price" placeholder="💡 Enter exact IRCTC ticket price" required />
 
         <label>Passenger Names:</label>
-        <input type="text" name="passengerNames" placeholder="e.g. Ramesh, Suresh" required />
+        <input type="text" name="passengerNames" placeholder="e.g. Ramesh" required />
 
         <label for="gender">Gender:</label>
         <select name="gender" id="gender" required>
@@ -170,7 +170,7 @@
             I accept the <a href="/docs/terms.pdf" target="_blank">Terms and Conditions</a>
         </label>
 
-        <i>Check your ticket (SOLD/UNSOLD) in Buy Ticket</i><br><br>
+        <i>Check your ticket (SOLD/UNSOLD) in My Tickets</i><br><br>
 
         <button type="submit">Submit Ticket</button>
     </form>
